--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines" : {
+    "node" : ">=8.9.4"
+  },
+  "os" : [
+    "linux"
+  ],
   "scripts": {
+    "start": "node index.js",
     "lint": "standard -v",
     "tape": "tape test.js | faucet",
     "test": "npm run lint && npm run tape"
