--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "start": "node index.js",
     "lint": "standard -v",
-    "tape": "tape test.js | faucet",
+    "tape": "tape test.js",
     "test": "npm run lint && npm run tape"
   },
   "author": "@rickycodes",
@@ -22,7 +22,6 @@
     "twit": "^2.2.9"
   },
   "devDependencies": {
-    "faucet": "0.0.1",
     "standard": "^10.0.3",
     "tape": "^4.8.0"
   }
