--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,7 @@ sudo: false
 language: node_js
 node_js:
   - stable
+before_install:
+  - pip install --user codecov
+after_success:
+  - codecov --file coverage/lcov.info --disable search
