--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "start": "node index.js",
     "lint": "standard -v",
     "tape": "tape test.js",
-    "test": "./node_modules/.bin/istanbul cover ./node_modules/tape/bin/tape test.js"
+    "cover": "istanbul cover tape test.js",
+    "test": "npm run lint && npm run cover"
   },
   "author": "@rickycodes",
   "license": "MIT",
